<resources>
    <string name="app_name">StudyApp</string>
    <string name="title_chart">Chart</string>
    <string name="title_plan">Plan</string>
    <string name="title_home">D-days</string>
    <string name="title_rank">Group</string>
    <string name="title_group">Group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


<!--    <string-array name = ""-->
</resources>