<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/chartoff"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/planoff"
        android:title="@string/title_plan" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homeoff"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_rank"
        android:icon="@drawable/rankoff"
        android:title="@string/title_rank" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/groupoff"
        android:title="@string/title_group" />

</menu>